[package]
name = "rlink-sink-conf"
version = "0.1.0"
authors = ["袁殷 <2212079150@qq.com>"]
edition = "2018"
description = "sink config for rlink"
keywords = ["rlink"]
repository = "https://github.com/yuanyinyan/rlink-sink-conf.git"
license = "MIT/Apache-2.0"

[lib]
name = "rlink_sink_conf"

[dependencies]
rlink = "0.2"

log = "0.4"

lazy_static = "1.4.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

dashmap = "3.11"

tokio = { version = "0.2", features = ["full"] }

